Fix right legend flickering

--- a/plugin/app/src/app/fitness-trend/fitness-trend-graph/fitness-trend-graph.component.scss
+++ b/plugin/app/src/app/fitness-trend/fitness-trend-graph/fitness-trend-graph.component.scss
@@ -8,6 +8,6 @@
 	cursor: pointer;
 }
 
-.stressScore i {
+.stressScore i, .restDay i {
 	font-size: 12px;
 }
